<resources>
    <string name="app_name">KotlinMPP</string>
    <string name="title">Train</string>
    <string name="departureLabel">Origin</string>
    <string name="arrivalLabel">Destination</string>
    <string name="submitButton">Submit</string>
    <string name="departureTimeLabel">Departure</string>
    <string name="arrivalTimeLabel">Arrival</string>
    <string name="timePlaceholder">22:05</string>
    <string name="datePlaceholder">2022-07-24</string>
    <string name="selectTimeLabel">Departure Time</string>
    <string name="priceLabel">Price</string>
    <string name="adultLabel">Adults</string>
    <string name="childLabel">Children</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
