<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/departureTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departureTimeLabel"
        style="@style/Text.Subtitle"/>
    <TextView
        android:id="@+id/departureTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/timePlaceholder"
        style="@style/Text"/>
    <TextView
        android:id="@+id/arrivalTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrivalTimeLabel"
        style="@style/Text.Subtitle"/>
    <TextView
        android:id="@+id/arrivalTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/timePlaceholder"
        style="@style/Text"/>
</LinearLayout>